# sscd-interview-test

./: .gitignore  README.md  pyproject.toml
data/input/: customers.json  orders_events.jsonl
mage_project/: io_config.yaml  metadata.yaml  requirements.txt
mage_project/data_exporters/: export_curated_orders.py
mage_project/data_loaders/: load_customers.py  load_order_events.py  run_order_events_pipeline.py
mage_project/order_events_pipeline/: data_exporter.py  data_loader.py  transformer.py
mage_project/pipelines/order_events_pipeline/: metadata.yaml
mage_project/transformers/: transform_order_events.py
scripts/: run_local_pipeline.py  validate_results.py
src/interview_task/: config.py  schemas.py  spark.py  transform.py
