[project]
name = "domain-data-engineer-interview"
version = "0.1.0"
description = "Starter kit for a domain data engineer interview task"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pandas==2.2.2",
    "pyspark==4.1.1",
    "pyyaml==6.0.1",
    "pytest==8.2.1",
]

[tool.uv]
package = false
